web-frontend/css/styles.css
/* /web-frontend/css/styles.css */
/* CSS file to add custom styles */

body, html {
    height: 100%;
    margin: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    background: #f0f4f8;
}

.auth-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.card {
    background: white;
    padding: 2em;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
    width: 400px;
    margin: auto;
}

/*Main Menu*/
.user-menu .menu-list {
    list-style-type: none;
    padding: 0;
}

.user-menu .menu-list li {
    margin-bottom: 10px;
}

.auth-title {
    color: #333;
    text-align: center;
    margin-bottom: 1em;
}

form {
    display: flex;
    flex-direction: column;
}

input[type="text"],
input[type="email"],
input[type="tel"],
input[type="password"] {
    padding: 10px;
    margin-bottom: 1em;
    border: 1px solid #ccc;
    border-radius: 5px;
}

button {
    padding: 10px;
    background: #ff4081;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    margin-bottom: 1em;
}

button:hover {
    background: #e0356b; /* Darker button color on hover */
}

.remember-me {
    display: flex;
    align-items: center;
    margin-bottom: 1em;
}

.remember-me input[type="checkbox"] {
    margin-right: 0.5em;
}

.switch-auth {
    text-align: center;
    margin-top: 0.5em;
}

.switch-auth a {
    color: #ff4081;
    text-decoration: none;
}

.switch-auth a:hover {
    text-decoration: underline;
}

/* Styling for the form inside the publish trip card */
#publishTripForm {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

#publishTripForm input[type="text"],
#publishTripForm input[type="datetime-local"],
#publishTripForm input[type="number"],
#publishTripForm button {
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
  font-size: 1rem;
}

/* Handle the case where the input is not required and could be empty */
#publishTripForm input:not([required]) {
    background-color: #f8f8f8;
}

#publishTripForm button {
  background-color: #f06292;
  color: white;
  border: none;
  cursor: pointer;
  transition: background-color 0.3s ease;
}


#updateProfileForm button:hover {
  background-color: #e91e63; /* Darker pink on hover */
}

#updateProfileForm input[type="text"],
#updateProfileForm input[type="email"],
#updateProfileForm input[type="tel"],
#updateProfileForm input[type="password"],
#updateProfileForm button {
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
  font-size: 1rem;
}

#updateProfileForm button {
    background-color: #f06292; /* Pink color for the button */
    color: white;
    border: none;
    cursor: pointer;
    transition: background-color 0.3s ease;
}
  
#updateProfileForm button:hover {
    background-color: #e91e63; /* Darker pink on hover */
}

.trip {
    margin-bottom: 40px; /* Adjust the space as needed */
}

